collection validation doesn't lock early enough to prevent racing against rollback

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.5
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Engines - Server Integration
    • Fully Compatible
    • ALL
    • v8.0
    • SongingMoose - 2025-01-07, NamePending - 2025-01-21
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      See linked BF

       

      Rollback can occur concurrently with a validate command, which can result in an invariant (that the session cache is not in the shutdown state) being reached.

       

      Prevent this by acquiring the lock earlier

            Assignee:
            Nic Hollingum
            Reporter:
            Nic Hollingum
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: