SERVER-98980: Lock globally earlier in validation (#30803)

GitOrigin-RevId: f919575e634ec655da1cbafbabd4033593ecbd84