src/mongo/db/catalog/validate/validate_state.cpp
@@ -71,6 +71,7 @@ ValidateState::ValidateState(OperationContext* opCtx,
                              const NamespaceString& nss,
                              ValidationOptions options)
     : ValidationOptions(std::move(options)),
+      _globalLock(opCtx, isBackground() ? MODE_IS : MODE_IX),
       _nss(nss),
       _dataThrottle(opCtx, [&]() { return gMaxValidateMBperSec.load(); }) {
 
@@ -158,8 +159,6 @@ Status ValidateState::initializeCollection(OperationContext* opCtx) {
         shard_role_details::getRecoveryUnit(opCtx)->setTimestampReadSource(
             RecoveryUnit::ReadSource::kProvided, *_validateTs);
 
-        _globalLock.emplace(opCtx, MODE_IS);
-
         try {
             shard_role_details::getRecoveryUnit(opCtx)->preallocateSnapshot();
         } catch (const ExceptionFor<ErrorCodes::SnapshotTooOld>&) {
@@ -177,7 +176,6 @@ Status ValidateState::initializeCollection(OperationContext* opCtx) {
         _collection =
             CollectionPtr(_catalog->establishConsistentCollection(opCtx, _nss, _validateTs));
     } else {
-        _globalLock.emplace(opCtx, MODE_IX);
         _databaseLock.emplace(opCtx, _nss.dbName(), MODE_IX);
         _collectionLock.emplace(opCtx, _nss, MODE_X);
         _catalog = CollectionCatalog::get(opCtx);
